# swnumericlibrary

./: .gitignore  CMakeLists.txt  ReadMe.md
Libraries/: CMakeLists.txt
Libraries/Geometry/: Edge.hpp  Plane.hpp  Point.hpp  Triangle.hpp
Libraries/Geometry/tests/: testPoint.cpp
Libraries/Random/: RngStreams.hpp
Libraries/Tensor/: CMakeLists.txt  CblasBackend.hpp  Matrix.hpp  SingleBackend.hpp  TensorBase.hpp  Vector.hpp
Libraries/Tensor/tests/: testMatrix.cpp  testVector.cpp
Routines/: CMakeLists.txt
Routines/ODEIntegrator/: CMakeLists.txt  ODEDynamics.hpp  RungeKutta45.hpp
Routines/ODEIntegrator/tests/: testRK45.cpp
Routines/Quadrature/: CMakeLists.txt  GaussLegendre.hpp
Routines/Quadrature/tests/: testGaussLegendre.cpp
